--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     ext.kotlin_version = '1.6.20'
-    ext.nav_version = '2.4.1'
+    ext.nav_version = "2.5.3"
+    ext.room_version = '2.4.3'
+    ext.mvvm_version = '2.5.1'
+    ext.retrofit_version = '2.9.0'
 
     repositories {
         google()
