--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
         jcenter()
     }
 
@@ -16,6 +19,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
         classpath 'com.google.firebase:perf-plugin:1.4.1'
+        classpath 'com.project.starter:easylauncher:6.1.0'
     }
 }
 
@@ -24,8 +28,19 @@ plugins {
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'com.google.secrets_gradle_plugin' version '0.4'
-
 }
+
+allprojects {
+    ext {
+        appConfig = [
+                applicationId: 'com.teamdefine.signease',
+                appName      : 'Sign Ease',
+                versionCode  : 2,
+                versionName  : '1.1'
+        ]
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
