ribbon for debug configured

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,15 @@ android {
             debuggable false
             minifyEnabled true
             shrinkResources true
+
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug{
             debuggable true
             minifyEnabled false
             shrinkResources false
+            applicationIdSuffix ".debug"
+            
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
