--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
-    ext.kotlin_version = '1.6.20'
-    ext.nav_version = '2.4.1'
+    ext {
+        kotlin_version = '1.6.20'
+        nav_version = '2.5.3'
+        dagger_version = '2.44.2'
+    }
 
     repositories {
         google()
@@ -16,9 +19,9 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.2.2'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.gms:google-services:4.3.14'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
-        classpath 'com.google.firebase:perf-plugin:1.4.1'
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
+        classpath 'com.google.firebase:perf-plugin:1.4.2'
         classpath 'com.project.starter:easylauncher:6.1.0'
     }
 }
