--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         kotlin_version = '1.6.20'
         nav_version = '2.5.3'
         dagger_version = '2.44.2'
+        koin_version = '3.4.0'
     }
 
     repositories {
